<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">安全卫士</string>
    <string name="action_settings">设置</string>
    <string name="app_lock">应用加锁</string>
    <string name="app_uninstall">应用卸载</string>
    <string name="apk_manage">安装包管理</string>
    <string name="tel_block">电话拦截</string>
    <string name="sms_block">短信拦截</string>
    <string name="show_flows">显示流量</string>
    <string name="monitor_setting">监控设置</string>
    <string name="exam_scan">体检扫描</string>
    <string name="start_exam">开始体检</string>
    <string name="harass_block">骚扰拦截</string>
    <string name="flow_monitor">流量监控</string>
	<string name="app_manage">应用管理</string>
	<string name="prevent_thelf">手机防盗</string>
	<string name="sms_block_record">短信拦截记录：</string>
	<string name="empty_sms_list">清空</string>
	<string name="sms_block_setting">设置</string>
	<string name="tel_block_setting">设置</string>
	<string name="refresh">刷新</string>
	
	
	<string name="empty_hint">清除提示</string>
	<string name="comfirm_empty">确定清除列表，清除后下次进入该界面时或者刷新才能恢复</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="black_white_list">黑白名单</string>
	<string name="black_list">黑名单</string>
	<string name="white_list">白名单</string>
	<string name="tel_block_record">电话拦截记录</string>
	<string name="add_black_list">添加黑名单</string>
	<string name="add_white_list">添加白名单</string>
	<string name="unknow">未知</string>
	<string name="on">已开启</string>
	<string name="off">已关闭</string>
	
	<string name="strange_number">拦截陌生号码</string>
	<string name="contact">拦截联系人</string>
	<string name="tel_block_mode">电话拦截模式</string>
	<string name="mute">\t静音</string>
	<string name="hang_up">\t直接挂断</string>
	<string name="shock">\t震动</string>
	<string name="reply_sms">挂断并回复短信</string>
	<string name="block_state">拦截状态</string>
	
	<string name="block_garbage_sms">拦截垃圾短信</string>
	<string name="block_keywords">拦截关键字</string>
	<string name="sms_block_mode">短信拦截模式</string>
	<string name="block_setting_return">返回</string>
	<string name="add_keywords">添加关键字</string>
	<string name="details">详情</string>
	<string name="delete">删除</string>
	<string name="hint">提示</string>
	<string name="lock">加锁</string>
	<string name="appName">应用名称</string>
	<string name="modify_lock_pwd">修改密码</string>
	<string name="setting_lock_pwd">设置密码</string>
	<string name="old_pwd">原密码:</string>
	<string name="new_pwd">新密码</string>
	<string name="unlock_pwd">解锁密码:</string>
	<string name="flows_monitor">流量监控</string>
	<string name="net_type">网络类型</string>
	<string name="up_load_speed">上传速度</string>
	<string name="down_load_speed">下载速度</string>
	<string name="download_total_flows">下载总流量</string>
	<string name="upload_total_flows">上传总流量</string>
	<string name="setting_flows">设置流量</string>
	<string name="_2g_3g">2G/3G</string>
	<string name="wifi">wifi</string>
	<string name="max_flows">最大流量</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="flows_monitor_notification">流量监控通知</string>
	<string name="setting_max_flows">设置最大流量</string>
	<string name="block_pwd_setting">密码设置</string>
	<string name="scanning">正在扫描:</string>
	<string name="size">大小：</string>
	<string name="sd_info">sd卡信息</string>
	<string name="sd_availableBlocks">可用存储块数量:</string>
	<string name="sd_blockCount">总存储块数量:</string>
	<string name="sd_block_size">存储块大小:</string>
	<string name="sd_availableSize">sd卡可用空间:</string>
	<string name="sd_totalSize">sd卡总空间:</string>
	<string name="sd_used_space">sd卡已用空间:</string>
	<string name="app_flows">应用流量</string>
	
	<string name="Byte">byte</string>
	<string name="version">version:</string>
	<string name="scan_complete">扫描完成：</string>
	
	<string name="uninstall">卸载</string>
	

</resources>
