<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="true" >
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hang_up"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/mute"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/shock"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/reply_sms"/>
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content" 
        android:layout_weight="1">
        <RadioGroup
            android:id="@+id/rg_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rb_mode_hang_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                 />

            <RadioButton
                android:id="@+id/rb_mode_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <RadioButton
                android:id="@+id/rb_mode_shock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <RadioButton
                android:id="@+id/rb_mode_reply_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>
